# panoptes-modern

./: .gitignore  HPC.md  MODERNIZATION.md
plugin/: pyproject.toml
plugin/src/snakemake_logger_plugin_panoptes/: __init__.py  settings.py
plugin/tests/: test_buffer.py
server/: pyproject.toml
server/src/panoptes_server/: db.py  main.py  models.py  schemas.py
server/src/panoptes_server/routes/: ingest.py  jobs.py  service.py  workflows.py  ws.py
server/src/panoptes_server/services/: ingest.py  log_tail.py  pubsub.py  stats.py
server/tests/: conftest.py  test_ingest.py  test_logs.py  test_routes.py  test_ws.py
ui/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts  hooks.ts  types.ts  useWorkflowEvents.ts
ui/src/components/: DagView.tsx  DurationChart.tsx  EventTimeline.tsx  JobsFilters.tsx  JobsTable.tsx  Layout.tsx  LogTail.tsx  RuleProgress.tsx  StatusBadge.tsx
ui/src/components/ui/: badge.tsx  card.tsx  progress.tsx  tabs.tsx
ui/src/lib/: format.ts
ui/src/pages/: AboutPage.tsx  JobDetailPage.tsx  WorkflowDetailPage.tsx  WorkflowsPage.tsx
