[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snakemake-logger-plugin-panoptes"
version = "0.1.0"
description = "Snakemake logger plugin that ships LogEvents to a panoptes server"
requires-python = ">=3.10"
dependencies = [
    "snakemake-interface-logger-plugins>=1.2",
    "snakemake-interface-common>=1.17",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/snakemake_logger_plugin_panoptes"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
