[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panoptes-server"
version = "0.1.0"
description = "FastAPI server for the panoptes snakemake monitor"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.19",
    "sqlalchemy[asyncio]>=2.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
panoptes-server = "panoptes_server.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/panoptes_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
